--- a/latihan.html
+++ b/latihan.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Learn Github</title>
-    </head>
+  <head>
+    <title>Learn Github</title>
+  </head>
 
-    <body>
-        <h1>Git Tutorial</h1>
-        <h3>Git Commands</h3>
-    </body>
+  <body>
+    <h1>Git Tutorial</h1>
+    <h3>Git Commands</h3>
+  </body>
 </html>
